--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
 }
 
 body{
-    background-image: url(./Assets/Background.png);
+    background-image: url(/Assets/Background.png);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -31,7 +31,7 @@ main{
 #name-newsletter{
     padding: 10% 0% 10% 0%;
     background: var(--blue);
-    background-image: url(./Assets/Pattern.png);
+    background-image: url(/Assets/Pattern.png);
     color: var(--white);
     text-align: center;
     font-size: small;
